
  - [SRFI-23] Display error message and optional objects as same as the
    reference implementation of SRFI-23

  - [SRFI-34] Add 'current handler' to error object to behave as same as the
    reference implementation of SRFI-34 'raise'

  - [SRFI-77, R6RS] The SRFI-77 procedures 'least-fixnum' and 'greatest-fixnum'
    have been upgraded to R6RS (R5.91RS) (nothing is actually changed)

  - Definition of dotted list length is changed to SRFI-1's from
    SigScheme-speciific one. SCM_LISTLEN_DOTTED(), SCM_DOTTED_LISTP() and other
    dotted list-related macros and functions have been changed so

  - Remove initial hyphen support for symbols (such as '-sym). Use
    (string->symbol "-sym") instead

  - Remove SIOD-compatible external representation of eof value '(eof)'

  - (scm_set_lib_path): Change to holding copied library path string

  - (scm_return_value): Removed

  - Change the low-level port API to fix the design error about error handling
    (get_byte() and peek_byte() were not able to detect read error)

  - Withdraw sigscheme-stdint.h. Use scmint.h instead

  - The --enable-configuration=CONF option of the configure is renamed to
    --enable-conf=CONF

  - The --enable-multibyte=ENCODING option of the configure is replaced with
    --enable-default-encoding=ENCODING, and --enable-ENCODING options are also
    added

* Fixes

  [R5RS] and [SRFI-n] tags indicate specification conformance fixes.

  - Fix crashes by broken va_list passing of format.c on x86_64 platform

  - Fix crashes by corrupted GC mark on stack on specific platforms that have
    (alignof(ScmObj) < sizeof(ScmObj)), such as m68k

  - Fix potential SEGV on long string parsing

  - Fix possible crash on parsing R5RS-reserved chars |[]{}

  - Fix broken GC on systems that have 8-byte aligned malloc(3) such as Cygwin

  - Fix broken 64-bit data model capability of storage-compact

  - Fix broken out of range error detection of string->number which fails every