@@ -515,7 +515,7 @@ corner case tests:
 
 file:              sigscheme.h
 category:          core
-spec by eyes:      yamaken@r4061, yamaken@r4103, yamaken@r4110, yamaken@r4111, yamaken@r4138, yamaken@4152
+spec by eyes:      yamaken@r4061, yamaken@r4103, yamaken@r4110, yamaken@r4111, yamaken@r4138, yamaken@4152, yamaken@r4182
 spec by tests:     
 general review:    yamaken@r4061
 64-bit by eyes:    yamaken@r4061
@@ -581,7 +581,7 @@ corner case tests:
 
 file:              storage-gc.c
 category:          core
-spec by eyes:      yamaken@r4066, yamaken@r4101, yamaken@r4108, yamaken@r4110, yamaken@r4111, yamaken@4152
+spec by eyes:      yamaken@r4066, yamaken@r4101, yamaken@r4108, yamaken@r4110, yamaken@r4111, yamaken@4152, yamaken@r4182
 spec by tests:     
 general review:    yamaken@r4066
 64-bit by eyes:    yamaken@r4066
@@ -669,7 +669,7 @@ corner case tests: yamaken@r3865, yamaken@r4103
 
 file:              module.c
 category:          core
-spec by eyes:      yamaken@r4019
+spec by eyes:      yamaken@r4019, yamaken@r4182
 spec by tests:     
 general review:    yamaken@r4019
 64-bit by eyes:    yamaken@r4019
@@ -680,7 +680,7 @@ corner case tests:
 
 file:              sigscheme.c
 category:          core
-spec by eyes:      yamaken@r4017, yamaken@r4019, yamaken@r4066, yamaken@4152
+spec by eyes:      yamaken@r4017, yamaken@r4019, yamaken@r4066, yamaken@4152, yamaken@r4182
 spec by tests:     
 general review:    yamaken@r4017
 64-bit by eyes:    yamaken@r4017
@@ -724,7 +724,7 @@ corner case tests:
 
 file:              load.c
 category:          semicore
-spec by eyes:      yamaken@r4017
+spec by eyes:      yamaken@r4017, yamaken@r4182
 spec by tests:     
 general review:    yamaken@r4017
 64-bit by eyes:    yamaken@r4017
@@ -999,7 +999,7 @@ corner case tests: yamaken@r3944
 
 file:              module-sscm-ext.c
 category:          opt
-spec by eyes:      yamaken@r4020
+spec by eyes:      yamaken@r4020, yamaken@r4182
 spec by tests:     
 general review:    yamaken@r4020
 64-bit by eyes:    yamaken@r4020
@@ -1055,6 +1055,18 @@ corner case tests:
 
 Log
 ---
+2006-12-23  YamaKen <yamaken AT bp.iij4u.or.jp>
+        * sigscheme.h
+        * storage-gc.c
+        * sigscheme.c
+        * module.c
+        * load.c
+        * module-sscm-ext.c
+          - QA done again @r4182
+          - libgcroots API and its SigScheme-specific implementation is
+            introduced to resolve corrupted GC problem on SPARC and IA-64. It
+            needs API change
+
 2006-12-19  YamaKen <yamaken AT bp.iij4u.or.jp>
         * config-old.h
           - QA done @r4145
